...
  5: { // 5月
    vegetables: ["そら豆", "グリーンピース", "アスパラガス", "新じゃがいも", "らっきょう", "新ごぼう", "きぬさや"],
    fish: ["かつお", "あじ", "いわし", "きす", "ほたるいか", "あゆ"],
    fruits: ["いちご", "メロン", "すいか", "さくらんぼ", "びわ"],
  },
  6: { // 6月
    vegetables: ["きゅうり", "なす", "トマト", "ピーマン", "ズッキーニ", "みょうが", "オクラ", "しそ", "新しょうが"],
    fish: ["あじ", "いわし", "すずき", "かます", "あなご", "うなぎ"],
    fruits: ["さくらんぼ", "びわ", "メロン", "すいか", "あんず", "プラム"],
  },
  7: { // 7月
    vegetables: ["トマト", "なす", "きゅうり", "ゴーヤ", "とうもろこし", "えだまめ", "オクラ", "みょうが", "しそ"],
    fish: ["あじ", "うなぎ", "はも", "すずき", "いわし", "あなご", "たこ"],
...
